Made some changes to layout colors and remove flex wrap, becuase it caused some issues will add media query

--- a/Class Exercise 04/style.css
+++ b/Class Exercise 04/style.css
@@ -5,13 +5,23 @@
 }
 body {
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
+}
+.background {
+    background-color: #ff6d00;
+    clip-path: polygon(0 0, 100% 0%, 100% 39%, 0 70%);
+    width: 100vw;
+    height: 120vh;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    z-index: -1;
 }
 .container {
     max-width: 1300px;
     margin: 0 auto;
 }
 .services {
-    background-color: #F2561D;
     padding: 5rem 2rem;
 }
 .services-section {
@@ -28,25 +38,26 @@ body {
     font-size: 1.3rem;
     text-transform: uppercase;
     margin-bottom: .35rem;
+    color: rgba(255, 255, 255, 0.8);
 }
 .services-heading {
-    font-size: 2.8rem;
+    font-size: 3rem;
     line-height: 1.3;
 }
 .services-copy {
-    font-size: 1.1rem;
+    font-size: 1.05rem;
     line-height: 1.7;
     padding-top: 2rem;
+    color: #fdfdfd9c;
 }
 .underline {
     width: 20%;
-    height: .4rem;
+    height: .3rem;
     background-color: rgb(255, 255, 255);
     margin: 1rem 0;
 }
 .main-btn {
-    border: none;
-    border-radius: 50rem;
+    border: 2px solid rgb(53, 42, 42);
     padding: .95rem 2rem;
     font-weight: 600;
     text-transform: uppercase;
@@ -58,33 +69,41 @@ body {
 }
 .main-btn:hover {
     transform: translateY(-5px);
-    filter: drop-shadow(0 5px 10px rgba(14, 13, 13, 0.2));
+    box-shadow: 0 5px 0 black;
 }
 .cards-section {
     padding-top: 3rem;
     display: flex;
-    gap: 1rem;
     width: 100%;
-    flex-wrap: wrap;
+    gap: 1rem;
 }
 .card {
-    flex: 1 1 20rem;
+    display: inline-block;
+    width: 33%;
+    height: 37rem;
     text-align: center;
-    background-color: rgb(22, 21, 21);
-    color: white;
-    padding: 1.2rem;
+    background-color: white;
+    border: 2px solid black;
+    padding: 2rem 1.2rem 1.2rem 1.5rem;
+    transition: all 300ms ease;
+    
+}
+.card:hover {
+    transform: perspective(75em) rotateX(10deg) scale(.95);
+    cursor: pointer;
+    box-shadow: 0 5px 0 black;
 }
 .card > * {
     padding-bottom: 1rem;
 }
 .card img {
-    width: 100%;
-    height: 25rem;
-    object-fit: cover;
+    height: 18rem;
+    width: 18rem;
 }
 .card h4 {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     margin: 1rem 0;
+    color: #ff6d00;
 }
 .card p {
     line-height: 1.7;
@@ -107,7 +126,8 @@ body {
     display: flex;
     flex-direction: column;
     width: clamp(30rem, 50vw, 40rem);
-    background-color: #F2561D;
+    background-color: #ff6d00;
+    border: 2px solid black;
     padding: 2rem;
     position: relative;
     z-index: 2;
@@ -145,7 +165,7 @@ input {
 }
 #send-btn {
     padding: .5rem;
-    height: 2.8rem;
+    height: 3rem;
     background-color: #111110;
     font-size: 1.1rem;
     border: none;
